create base.html, other templates and urls

--- a/simplesocial/templates/base.html
+++ b/simplesocial/templates/base.html
@@ -4,14 +4,53 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Star Social</title>
+
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+            integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+        <!-- Optional theme -->
+        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> -->
+
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
+        <link rel="stylesheet" href="{% static 'simplesocial/css/master.css'%}">
+
+
     </head>
 
     <body>
-        {% block content %}
 
-        {% endblock content %}
+        <nav class='navbar mynav' role='navigation' id='navbar'>
+            <div class="container">
+                <a class="navbar-brand mynav" href={% url 'home' %}>Star Social</a>
+
+                <ul class='nav navbar-nav navbar-right'>
+                    {% if user.is_authenticated %}
+                    <li><a href="#">Post</a></li>
+                    <li><a href="#">Groups</a></li>
+                    <li><a href="#">Create Group</a></li>
+                    <li><a href="{% url 'accounts:logout' %}">Log Out</a></li>
+                    {% else %}
+                    <li><a href="#">Groups</a></li>
+                    <li><a href={% url 'accounts:login' %}>Log In</a></li>
+                    <li><a href="{% url 'accounts:signup' %}">Sign Up</a></li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
+
+        <div class="container mycontainer">
+            {% block content %}
+
+            {% endblock content %}
+        </div>
+
 
     </body>
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+    </script>
 
 </html>
