--- a/simplesocial/groups/templates/groups/group_list.html
+++ b/simplesocial/groups/templates/groups/group_list.html
@@ -22,7 +22,7 @@
 </div>
 {% endblock pregroup %}
 
-{% block content %}
+{% block group_content %}
 <div class="col-md-8">
     <div class='list-group'>
         {% for group in object_list %}
@@ -46,4 +46,4 @@
         {% endfor %}
     </div>
 </div>
-{% endblock content %}
+{% endblock group_content %}
