--- a/simplesocial/posts/templates/posts/post_form.html
+++ b/simplesocial/posts/templates/posts/post_form.html
@@ -1,7 +1,7 @@
 {% extends 'posts/post_base.html' %}
 {% load bootstrap3 %}
 
-{% block content %}
+{% block post_content %}
 <h4>Create a new post</h4>
 
 <form id='postForm' action="{% url 'posts:create' %}" method="post">
@@ -10,4 +10,4 @@
     <input type="submit" value='Post' class='btn btn-primary btn-large'>
 </form>
 
-{% endblock content %}
+{% endblock post_content %}
