--- a/simplesocial/posts/templates/posts/post_confirm_delete.html
+++ b/simplesocial/posts/templates/posts/post_confirm_delete.html
@@ -1,5 +1,5 @@
 {% extends 'posts/post_base.html' %}
-{% block content %}
+{% block post_content %}
 
 <h3>Are you sure you want to delete this post?</h3>
 <div class="posts">
@@ -13,4 +13,4 @@
         class="btn btn-simple btn-large btn-default">Cancel</a>
 </form>
 
-{% endblock content %}
+{% endblock post_content %}
