--- a/simplesocial/posts/templates/posts/user_post_list.html
+++ b/simplesocial/posts/templates/posts/user_post_list.html
@@ -1,14 +1,14 @@
 {% extends 'posts/post_base.html' %}
 
-{% block content %}
+{% block prepost %}
 <div class="col-md-4">
     <h1>@{{post_user.username}}</h1>
 </div>
-{% endblock content %}
+{% endblock prepost %}
 {% block post_content %}
 <div class="col-md-8">
     {% for post in post_list %}
-    {% include "post/_post.html" %}
+    {% include "posts/_post.html" %}
     {% endfor %}
 </div>
 {% endblock post_content %}
