--- a/simplesocial/templates/base.html
+++ b/simplesocial/templates/base.html
@@ -7,11 +7,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Star Social</title>
 
+        {% comment %}
+        {% comment %}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+            {% endcomment %} {% comment %}
             integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        {% endcomment %}
+        {% comment %} {% endcomment %}
 
         <!-- Optional theme -->
-        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> -->
+        {% comment %}
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+            integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+        {% endcomment %}
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+            integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
@@ -28,12 +39,12 @@
 
                 <ul class='nav navbar-nav navbar-right'>
                     {% if user.is_authenticated %}
-                    <li><a href="#">Post</a></li>
-                    <li><a href="#">Groups</a></li>
-                    <li><a href="#">Create Group</a></li>
+                    <li><a href="{% url 'posts:create' %}">Post</a></li>
+                    <li><a href="{% url 'groups:all' %}">Groups</a></li>
+                    <li><a href="{% url 'groups:create' %}">Create Group</a></li>
                     <li><a href="{% url 'accounts:logout' %}">Log Out</a></li>
                     {% else %}
-                    <li><a href="#">Groups</a></li>
+                    <li><a href="{% url 'groups:all' %}">Groups</a></li>
                     <li><a href={% url 'accounts:login' %}>Log In</a></li>
                     <li><a href="{% url 'accounts:signup' %}">Sign Up</a></li>
                     {% endif %}
